--- a/requirements.txt
+++ b/requirements.txt
@@ -83,7 +83,7 @@ ply==3.11
 prometheus-client==0.7.1
 protobuf==3.12.2
 psutil==5.6.7
-psycopg2-binary==2.8.4
+psycopg2-binary
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.19
